--- a/src/main/resources/static/resources/pages/business_buying_guidance.html
+++ b/src/main/resources/static/resources/pages/business_buying_guidance.html
@@ -44,7 +44,7 @@ html {
     <p>A franchise is a business model where one business owner (the “franchisor”) sells the rights to their business logo, name, and model to an independent entrepreneur (the “franchisee”). Restaurants, hotels, and service-oriented businesses are commonly franchised.</p>
     
     <p>Two common forms of franchising are:</p>
-    <p><b>1. Product/trade name franchising:</b> The franchisor owns the right to the name or trademark of a business, and sells the right to use that name and trademark to a franchisee. This style of franchising normally focuses on supply chain management. Typically, products are manufactured or supplied by the franchisor and delivered to the franchisee to sell.</p>
+    <p><b>1. Product/trade name franchising:</b> The franchisor owns the right to the name or trademark of a business, and sells the right to use that name and trademark to a franchisee. This style of franchising normally focuses on supply chain management. Typically, products are manufactured or supplied by the franchisor and delivered to the franchisee to sale.</p>
     <p><b>2. Business format franchising:</b> The franchisor and franchisee have an ongoing relationship. This style of franchising normally focuses on full-spectrum business management. Typically, the franchisor offers services like site selection, training, product supply, marketing plans, and even help getting funding.</p>
 	<p>When you buy a franchise, you get the right to use the name, logo, and products of a larger brand. You’ll also get to benefit from brand recognition, promotions, and marketing. But, it also means you have to follow rules from the larger brand about how you run your business.</p>
     
