--- a/src/main/resources/static/resources/pages/business_selling_guidance.html
+++ b/src/main/resources/static/resources/pages/business_selling_guidance.html
@@ -31,17 +31,17 @@ html {
 <p>This article is to explain process of Selling a Small Business.</p>
 
 <p>It is written with gathering data from multiple sources but primarily from
-    <a href="https://www.nfib.com/content/resources/money/how-to-sell-a-small-business-in-7-steps-63818/" target="_blank">
-        https://www.nfib.com/content/resources/money/how-to-sell-a-small-business-in-7-steps-63818/
+    <a href="https://www.nfib.com/content/resources/money/how-to-sale-a-small-business-in-7-steps-63818/" target="_blank">
+        https://www.nfib.com/content/resources/money/how-to-sale-a-small-business-in-7-steps-63818/
     </a>
 </p>
 
 
 <h4>Instructions</h4>
-    <p>Sell your small business safely and smartly with these expert tips.</p>
+    <p>Sale your small business safely and smartly with these expert tips.</p>
     <p>When a small business goes on the block, it’s not just buyers who are investigating. Smart sellers are coming to the table with a clear understanding of their business’ competitive position in the market, a realistic asking price and knowledge of a potential buyer’s suitability well before they sit down to negotiate.</p>
     <p>Selling requires careful planning—everything from cleaning up sloppy books and tax records to dressing up a tired store and updating old operating systems—even ramping up marketing to juice sales and command a higher asking price.</p>
-    <p>In the coming decade, many independent ventures will change hands as baby boomers continue to retire in droves. And according to the online business marketplace BizBuySell, it’s a good time to sell: 1,685 small businesses sold between July and September, up from 1,189 in 2012.</p>
+    <p>In the coming decade, many independent ventures will change hands as baby boomers continue to retire in droves. And according to the online business marketplace BizBuySell, it’s a good time to sale: 1,685 small businesses sold between July and September, up from 1,189 in 2012.</p>
     <p>If you’re considering selling your small business, consider these seven steps to stay on the offensive.</p>
 
     <h6>1. Determine the value of your company.</h6>
@@ -55,12 +55,12 @@ html {
     <p>On the seller’s side, even commercial landlords are getting into the due diligence game in the post-recession world, taking on the role of bankers by vetting the credit-worthiness of interested buyers before they’ll consider transferring a lease.</p>
 
     <h6>3. Prepare your exit strategy in advance.</h6>
-    <p>All too often, an unexpected factor—an aging or ill owner, lack of interest in succession from adult children, a competitive threat such as the arrival of a big-box store—forces small business owners to sell. So if you plan to outlast your competitors, prepare your exit strategy now, before such a situation forces a sale, says Ed Knox, founder of White Plains, N.Y.-based Yarmouth Venture Group, an advisory to investors looking to invest in small businesses.</p>
-    <p>Among Knox’s favorite selling strategies is one that is often overlooked: having a trusted employee take over the business. “He’s on the inside, knows all the customers, knows all the skeletons in the closet,” says Knox. If you do sell to an industry outsider, “there needs to be sufficient transition time so the new owner will feel comfortable with the industry,” he says.</p>
+    <p>All too often, an unexpected factor—an aging or ill owner, lack of interest in succession from adult children, a competitive threat such as the arrival of a big-box store—forces small business owners to sale. So if you plan to outlast your competitors, prepare your exit strategy now, before such a situation forces a sale, says Ed Knox, founder of White Plains, N.Y.-based Yarmouth Venture Group, an advisory to investors looking to invest in small businesses.</p>
+    <p>Among Knox’s favorite selling strategies is one that is often overlooked: having a trusted employee take over the business. “He’s on the inside, knows all the customers, knows all the skeletons in the closet,” says Knox. If you do sale to an industry outsider, “there needs to be sufficient transition time so the new owner will feel comfortable with the industry,” he says.</p>
 
     <h6>4. Boost your sales.</h6>
     <p>
-        Buyers want to see businesses with some upside, says Todd Cushing, principal at EBIT Associates, an intermediary in Barrington, Ill., that works on retainer to help small to mid-size companies prepare for sales and identify buyers. “When sales are declining, that’s not when to sell,” he cautions. Cushing adds that buyers might also get skittish if a single customer represents more than 20 percent of revenue, putting sales at risk if that business is lost. If necessary, he says, diversify the customer base or jumpstart sales with increased marketing and promotions.
+        Buyers want to see businesses with some upside, says Todd Cushing, principal at EBIT Associates, an intermediary in Barrington, Ill., that works on retainer to help small to mid-size companies prepare for sales and identify buyers. “When sales are declining, that’s not when to sale,” he cautions. Cushing adds that buyers might also get skittish if a single customer represents more than 20 percent of revenue, putting sales at risk if that business is lost. If necessary, he says, diversify the customer base or jumpstart sales with increased marketing and promotions.
     </p><p>
         While you’re at it, push out bloated inventories and get operating systems up to date. Retail establishments might warrant a fresh coat of paint and some new fixtures, while restaurants might update their menus and say goodbye to disagreeable staff. Overall, Cushing says to ask yourself: “What do you have to do to get your sales to increase?”
     </p>
