--- a/src/main/resources/static/resources/pages/editListing.html
+++ b/src/main/resources/static/resources/pages/editListing.html
@@ -21,11 +21,11 @@
                 </select>
               </div>
               <div class="form-group">
-                <label>For Sell/Rent?</label>
+                <label>For Sale/Rent?</label>
                 <div>
                   <div class="radio radio-inline">
-                    <input type="radio" name="type" id="sell" ng-model="property.rentSale" value="Buy">
-                    <label for="sell">Sell</label>
+                    <input type="radio" name="type" id="sale" ng-model="property.rentSale" value="Buy">
+                    <label for="sale">Sale</label>
                   </div>
                   <div class="radio radio-inline">
                     <input type="radio" name="type" id="lease" ng-model="property.rentSale" value="Lease">
@@ -183,7 +183,7 @@
               <div class="form-group">
                 <div class="checkbox">
                   <input type="checkbox" id="featured">
-                  <label for="featured">Yes ‚ feature this listing. </label>
+                  <label for="featured">Yes ï¿½ feature this listing. </label>
                 </div>
               </div> -->
               <hr>
