--- a/src/main/resources/static/resources/pages/header.html
+++ b/src/main/resources/static/resources/pages/header.html
@@ -32,14 +32,14 @@
     </ul>
     <ul class="navbar-nav">
         <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#search/sell" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#search/sale" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Sellers
         </a>
         <div class="dropdown-menu">
-            <a href="#sell_a_business" class="dropdown-item">Sell a business</a>
+            <a href="#sell_a_business" class="dropdown-item">Sale a business</a>
             <a href="#business_selling_guidance" class="dropdown-item">Business Selling Guidance</a>
             <a href="#find_value_of_business" class="dropdown-item">Find the RealWorth of your Business</a>
-            <a href="#search_agents" class="dropdown-item">Find Business Service Providers to help Sell</a>
+            <a href="#search_agents" class="dropdown-item">Find Business Service Providers to help Sale</a>
 	    <a href="#sellers_faq" class="dropdown-item">Sellers's FAQ</a>
         </div>
     </li>
