--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -64,7 +64,7 @@
           <h2>Find <i>RealWorth</i><small>&trade;</small> of Business!</h2>
 	  <h6 style="color:#FFFF00">See critical information and valuation data for millions of businesses all over US.</h6>
 	  <!-- 
-	  	<h6 style="color:#FF0000">See thousands of Business that are for sell.</h6>
+	  	<h6 style="color:#FF0000">See thousands of Business that are for sale.</h6>
 	  -->
         </div>
         <form name="searchBusinessForm" ng-controller="homeController" ng-submit="submitted = true" novalidate>
@@ -144,7 +144,7 @@
 <!--                       placeholder="">-->
 <!--              </div>-->
                 <div class="col-md-5 col-lg-4 col-xl-4">
-<!--                    <label style="color:white;margin-top:30px">Show For Sell Business only</label>-->
+<!--                    <label style="color:white;margin-top:30px">Show For Sale Business only</label>-->
                     <div class="checkbox checkbox-inline">
                         <input type="checkbox" name="isForSell" id="isForSell" ng-model="isForSell" ng-false-value="N"
                                ng-true-value="Y">
@@ -242,7 +242,7 @@
              style="background-color:#eeeeeee3;margin:0px;display:block;">
             <div class="heading">
                 <h5 style="color:black;padding:10px 50px 10px 50px;">
-                    Subscribe to get emails with 'For Sell' Business Listings.
+                    Subscribe to get emails with 'For Sale' Business Listings.
                 </h5>
             </div>
             <form name="subscribeBusiness" ng-controller="homeController" ng-submit="subscribeSubmitted = true" novalidate>
