--- a/src/main/resources/static/resources/pages/products_and_services.html
+++ b/src/main/resources/static/resources/pages/products_and_services.html
@@ -54,11 +54,11 @@ h3 h5 h6 {
 </style>
 <div class="about-section">
     <h3>Why BizRealWorth.com?</h3>
-    <p>BizRealWorth.com(BRW) provides UNIQUE VALUE over its competitors by showing estimated worth of business that are on sell as well as millions of other businesses all over US. Business details page shows Key Performance Indicators(KPIs) of business, Geographical Factors(neighboring business - competition vs opportunities, foot traffic, vehicle traffic, population density etc) and Social Factors(demographic build up, crime factors, income factors, spending habits etc) along with other business critical information. All these factors are customized based on business category.</p>
+    <p>BizRealWorth.com(BRW) provides UNIQUE VALUE over its competitors by showing estimated worth of business that are on sale as well as millions of other businesses all over US. Business details page shows Key Performance Indicators(KPIs) of business, Geographical Factors(neighboring business - competition vs opportunities, foot traffic, vehicle traffic, population density etc) and Social Factors(demographic build up, crime factors, income factors, spending habits etc) along with other business critical information. All these factors are customized based on business category.</p>
     
     <h3>Products and Services offered by BizRealWorth.com</h3>
     <h5>A. Business Listing Services</h5>
-    <p>Services Include - Business For Sell, Business Franchise Available, Business For Lease, Business Real Estate For Sale, Business Real Estate For Lease, Land For Sale, Land For Lease, Looking For Business Partner, Business Co-Location For Lease, Coming Soon, etc</p>
+    <p>Services Include - Business For Sale, Business Franchise Available, Business For Lease, Business Real Estate For Sale, Business Real Estate For Lease, Land For Sale, Land For Lease, Looking For Business Partner, Business Co-Location For Lease, Coming Soon, etc</p>
     <table>
         <tbody>
         <tr>
@@ -200,7 +200,7 @@ h3 h5 h6 {
     <p>There are a number of powerful advantages for a potential seller to use Business Evaluation Systems including:</p>
     <ul>
         <li>Confidence of Value</li>
-        <li>Knowing if or when to sell</li>
+        <li>Knowing if or when to sale</li>
         <li>Establishes Strengths and Weaknesses</li>
         <li>Establishes the Seller’s Tax situation</li>
         <li>Seller’s Appraisal, not the Bank’s</li>
