--- a/src/main/resources/static/resources/pages/searchAgents.html
+++ b/src/main/resources/static/resources/pages/searchAgents.html
@@ -5,7 +5,7 @@
       <div class="col-md-12 col-lg-12 col-xl-12">
           <div class="page-header bordered">
               <h1 style="color: #fff">Find Business Services Provider - Business Broker, Business Appraiser, Business Attorney, M&A Advisor or Business Banker
-                  <small style="color: #fff">Search an expert who can help you with Buy or Sell a Business.</small>
+                  <small style="color: #fff">Search an expert who can help you with Buy or Sale a Business.</small>
               </h1>
           </div>
           <form name="searchAgentsForm" ng-controller="searchAgentsController" ng-submit="submitted = true" novalidate>
@@ -82,7 +82,7 @@
                 <p style="color:#fff">When selling a business, Business Appraiser can help you properly value the price of the business.</p> 
 		<p style="color:#fff">Because Business Attorneys know how to protect your interest at the tyme of the business transaction, they can provide valuable 		advice so that you can attend to the details that will help make your business more attractive to buyers.</p> 
 		<p style="color:#fff">Mergers and Acquisition Advisors can help attract more prospects to your business for sale with their extended network of 		business resources and contacts.</p>
-                <p style="color:#fff">So when you are faced with the question as to whether it is worth using services of Business Expert to buy or sell a business, 		consider these benefits. You should find that the benefits can easily justify any fees that may be involved.</p>
+                <p style="color:#fff">So when you are faced with the question as to whether it is worth using services of Business Expert to buy or sale a business, 		consider these benefits. You should find that the benefits can easily justify any fees that may be involved.</p>
           </div>
           </div>
       </div>
