--- a/src/main/resources/static/resources/pages/sell.html
+++ b/src/main/resources/static/resources/pages/sell.html
@@ -37,8 +37,8 @@
 <label class="radio-inline" for="buy22">Buy</label>
 </div>
 <div class="radio-box">
-<input type="radio" name="searchin" value="sell" id="sell22" checked>
-<label class="radio-inline" for="sell22" >Sell</label>
+<input type="radio" name="searchin" value="sale" id="sell22" checked>
+<label class="radio-inline" for="sell22" >Sale</label>
 </div>
 <div class="radio-box">
 <input type="radio" name="searchin" value="lease" id="lease22">
@@ -180,7 +180,7 @@
               <div class="col-md-4">
                 <div class="content-box">
                   <div class="image"> <img src="http://via.placeholder.com/150x150" width="100" alt=""> </div>
-                  <h4>Sell</h4>
+                  <h4>Sale</h4>
                   <div class="caption">Understand your local market, learn how to get the best price for your property and find agents in your area.</div>
                   <div class="button"><a href="#">EXPLORE NOW</a></div>
                 </div>
