--- a/src/main/resources/static/resources/pages/sell_a_business.html
+++ b/src/main/resources/static/resources/pages/sell_a_business.html
@@ -28,7 +28,7 @@ html {
 </style>
 
 <div class="about-section">
-<h4><b>Are you planning to Sell your Business?</h4></p>
+<h4><b>Are you planning to Sale your Business?</h4></p>
 
 <p>www.BizRealWorth.com is striving to be leading trustworthy Business Valuation Platform for Small and Medium size businesses and business community members all over US.</p>
 
