--- a/src/main/resources/static/resources/pages/sellers_faq.html
+++ b/src/main/resources/static/resources/pages/sellers_faq.html
@@ -93,7 +93,7 @@ h3 h5 h6 {
     <h5>How to update a listing?</h5>
   <p>To update or make changes to your listing:</p>
   <p>1. Log in to your BizRealWorth.com account.</p>
-  <p>2. Click the Sell on the top header of the portal dashboard.</p>
+  <p>2. Click the Sale on the top header of the portal dashboard.</p>
   <p>3. From here, you will see your current listing- click Edit.</p>
   <p>4. Make the desired changes to your listing.</p>
   <p>5. Click Save.</p>
