--- a/src/main/resources/static/resources/pages/service_fees_faq.html
+++ b/src/main/resources/static/resources/pages/service_fees_faq.html
@@ -85,7 +85,7 @@ on the subscription plan you select.</p>
 		<p>Please call BizRealWorth.com's cutomer support at 855-522-5579</p>
 		
 		<h5>How secure is the website with regards to confidential financial  information?</h5>
-		<p>BizRealWorth.com does not sell or give out to anyone your information, email address, name etc. We value your privacy as we do ours. BizRealWorth.com also utilizes to ensure your privacy the best encryption code and security programs available.</p>
+		<p>BizRealWorth.com does not sale or give out to anyone your information, email address, name etc. We value your privacy as we do ours. BizRealWorth.com also utilizes to ensure your privacy the best encryption code and security programs available.</p>
 		
 		<h5>How do I connect if I have billing questions?</h5>
 		<p>Still have a question about billing? Please call us at 855-522-5579</p>
