--- a/src/main/resources/static/resources/pages/editListingForm.html
+++ b/src/main/resources/static/resources/pages/editListingForm.html
@@ -136,11 +136,11 @@
                 <!--</div>-->
               <!--</div>-->
               <!--<div class="form-group">-->
-                <!--<label>For Sell/Lease?</label>-->
+                <!--<label>For Sale/Lease?</label>-->
                 <!--<div>-->
                   <!--<div class="radio radio-inline">-->
-                    <!--<input type="radio" name="type" id="sell" ng-model="business.rentSale" value="Buy">-->
-                    <!--<label for="sell">Sell</label>-->
+                    <!--<input type="radio" name="type" id="sale" ng-model="business.rentSale" value="Buy">-->
+                    <!--<label for="sale">Sale</label>-->
                   <!--</div>-->
                   <!--<div class="radio radio-inline">-->
                     <!--<input type="radio" name="type" id="lease" ng-model="business.rentSale" value="Lease">-->
@@ -171,7 +171,7 @@
                   <textarea class="form-control form-control-md text-editor" ng-model="propertyMetaData.businessDescription" placeholder=""></textarea>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-6">
-                  <label>Reason for Sell</label>
+                  <label>Reason for Sale</label>
                   <textarea class="form-control form-control-md text-editor" ng-model="propertyMetaData.reasonForSell" placeholder=""></textarea>
                 </div>
               </div>
