--- a/src/main/resources/static/resources/pages/about_us.html
+++ b/src/main/resources/static/resources/pages/about_us.html
@@ -114,7 +114,7 @@ h2 h6 {
     more than ever to make sure we get worth of every penny we spend in business.</p>
     
     <p>www.BizRealWorth.com is here to help you gain trust and confidence in the financial dealings about Business 
-    Buy, Sells, Mergers and Acquisitions. Our goal is to empower Small Business Community or Main Street USA by the 
+    Buy, Sell, Mergers and Acquisitions. Our goal is to empower Small Business Community or Main Street USA by the 
     means of digitization of information and advancement in data collection and data processing technologies like 
     Data Mining, Digital Transformations, AI and ML. Our innovative self evolving algorithm that is named 
     RealWorth&trade; can help you know more about businesses in the area where you are doing business, or thinking 
