--- a/src/main/resources/static/resources/pages/search_business_for_sell.html
+++ b/src/main/resources/static/resources/pages/search_business_for_sell.html
@@ -28,7 +28,7 @@ html {
 </style>
 
 <div class="about-section">
-<h4><b>Search missions of business all over US!</h4></p>
+<h4><b>Search Millions of businesses all over US!</h4></p>
 
 <p>www.BizRealWorth.com is striving to be leading trustworthy Business Valuation Platform for Small and Medium size businesses and business community members all over US.</p>
 
