--- a/src/main/resources/static/resources/pages/search_business_for_sell.html
+++ b/src/main/resources/static/resources/pages/search_business_for_sell.html
@@ -32,5 +32,5 @@ html {
 
 <p>www.BizRealWorth.com is striving to be leading trustworthy Business Valuation Platform for Small and Medium size businesses and business community members all over US.</p>
 
-<p>Find your dream business on sale from missions of business all over US. www.BizRealWorth.com utilized the power of Digital Transformation and Big Data to help you see critical information about business and also value estimates and more... <a href="#home" style="color:black;font-weight:bold;text-decoration: underline;"> Find Business</a></p>
+<p>Find your dream business on sale from millions of businesses all over US. www.BizRealWorth.com utilized the power of Digital Transformation and Big Data to help you see critical information about business and also value estimates and more... <a href="#home" style="color:black;font-weight:bold;text-decoration: underline;"> Find Business</a></p>
 </div>
