Updated Logo and Icon

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
 <link href="lib/aos/aos.css" rel="stylesheet">
 <link rel="stylesheet" href="lib/photoswipe/photoswipe.css">
 <link rel="stylesheet" href="lib/photoswipe/default-skin/default-skin.css">
-<link rel="icon" href="img/favicon.png">
+<link rel="icon" href="img/logoIcon.jpg">
 <link href="lib/Magnific-Popup/magnific-popup.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 
